--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,11 @@ go:
     - 1.14.2
     - master
 
-script: go test -v ./...
+install: 
+    - go get golang.org/x/tools/cmd/cover
+    - go get github.com/mattn/goveralls
+
+
+script: 
+    - go test -v -covermode=count -coverprofile=coverage.out
+    - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
