--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ install:
 
 script: 
     - go test -v -covermode=count -coverprofile=coverage.out ./...
-    - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci
+    - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
